Add initial game entity and environment class headers
Added header files for core game entities (Byt, Gracz, Przeciwnik, Pocisk, Zdobycz), environment elements (Mapa, Otoczenie, Sciana, Podloga), and supporting structures (Wektor2D, Ustawienia, StrategiaPrzeciwnika, ElementGry). Updated CMakeLists.txt to include these headers in the build. This lays the foundation for the game's architecture and object relationships.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,22 @@ endif()
 add_executable(ArcadeGameProject
     src/main.cpp
     src/glad.c
-    )
+        src/mapa.h
+        src/gra.h
+        src/element_gry.h
+        src/wektor_2d.h
+        src/otoczenie.h
+        src/byt.h
+        src/gracz.h
+        src/zdobycz.h
+        src/ustawienia.h
+        src/sciana.h
+        src/podloga.h
+        src/strategia_przeciwnika.h
+        src/przeciwnik.h
+        src/pocisk.h
+        src/pocisk_dekorator.h
+)
 
 # Link against SDL3
 #target_link_libraries(ArcadeGameProject PRIVATE SDL3::SDL3-static)
