Add Settings singleton, and zoom in and out functionality
Zoom is accessed on page up and page down keys.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,8 @@ add_executable(ArcadeGameProject
     src/player.hpp
     src/player.cpp
     src/zdobycz.hpp
-    src/ustawienia.hpp
+    src/settings.hpp
+    src/settings.cpp
     src/wall.hpp
     src/wall.cpp
     src/floor.hpp
