An attempt at static linking of SDL3 library
Fixes #3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ include(FetchContent)
 # This line below tells SDL3 to expose those SDL hook methods and to handle the main() function.
 # From what I know, this helps in case I want to make the project cross-compile which I intend for at least both Linux and Windows platforms.
 set(SDL_MAIN_USE_CALLBACKS 1)
+set(SDL_SHARED FALSE)
+set(SDL_STATIC TRUE)
 
 set(SHADER_DIR ${CMAKE_SOURCE_DIR}/shaders/)  # Path to shader directory
 file(GLOB SHADERS ${SHADER_DIR}/*)  # List of all shaders present there
@@ -49,15 +51,8 @@ function(include_dependency libName gitURL gitTag)
     FetchContent_MakeAvailable(${libName})
 endfunction()
 
-# add SDL3 support
-find_package(SDL3 QUIET)
-if (NOT SDL3_FOUND)
-    message(STATUS "Getting SDL3 from Github")
-#    include_dependency(SDL3 https://github.com/libsdl-org/SDL.git release-3.2.18)
-    include_dependency(SDL3 https://github.com/libsdl-org/SDL.git main)
-else()
-    message(STATUS "Using local SDL3")
-endif()
+message(STATUS "Getting SDL3 from Github")
+include_dependency(SDL3 https://github.com/libsdl-org/SDL.git main)
 
 message(STATUS "Getting GLM from Github")
 include_dependency(glm https://github.com/g-truc/glm.git 1.0.1)
@@ -77,11 +72,8 @@ add_executable(ArcadeGameProject
 # From now on this is where I set the C++ standard for this project
 target_compile_features(ArcadeGameProject PRIVATE cxx_std_20)
 
-# Link against SDL3
-#target_link_libraries(ArcadeGameProject PRIVATE SDL3::SDL3-static)
-
 # set the include directory
-target_include_directories(ArcadeGameProject PUBLIC ${SDL3_INCLUDE_DIRS})
+target_include_directories(ArcadeGameProject PRIVATE ${SDL3_INCLUDE_DIRS})
 target_include_directories(ArcadeGameProject PRIVATE include/)
 
 target_compile_definitions(ArcadeGameProject PRIVATE SDL_MAIN_USE_CALLBACKS)
